poc-outpost/modules/nifi/template/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nifi-gateway
  namespace: nifi
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-nifi
      hosts:
        - "nifi.orange-eks.com"
